<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingslayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginStart="15dp"
        android:layout_marginTop="27dp"
        android:text="@string/Search_Engine"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />



    <Spinner
        android:layout_width="wrap_content"
        android:id="@+id/searchengines"
        android:layout_height="30dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:entries="@array/searchengines"></Spinner>

    <TextView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/search"
        android:layout_below="@+id/searchengines"
        android:layout_marginTop="30dp"
        android:text="@string/ho"
        android:layout_marginStart="0dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/homeedittext"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="76dp"
        android:imeOptions="actionGo"
        android:inputType="textWebEditText|textNoSuggestions"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:singleLine="true"
        android:cursorVisible="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme"
        android:textSize="18sp"
        android:layout_marginTop="145dp"
        android:layout_marginStart="15dp"
        android:textColor="@color/colorPrimaryDark"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="140dp"
        android:entries="@array/Themes"
        android:id="@+id/themespinnner"></Spinner>

</RelativeLayout>